# data-pipeline-mcp

./: .gitignore  Makefile  README.md  bigquery_support.py  main.py  pyproject.toml  sample_data.py  server.py
.cursor/: mcp.json
config/: bigquery.example.yaml
scripts/: seed_bigquery_demo.py
